# spark-ingestion

./: LICENSE  README.md  main.py  pyproject.toml
